--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     signingConfigs {
         debug {
@@ -119,11 +120,42 @@ android {
             include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
+
+    packagingOptions  {
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE.txt'
+    exclude '*/res/**'
+    exclude 'AndroidManifest.xml'
+   }
+
+   dexOptions {
+      javaMaxHeapSize "4g"
+   }
+
+   repositories {
+        flatDir {
+            dirs 'libs'
+        }
+   }
+
 }
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation (name:'peb-lib-android-x', ext:'aar')
+implementation 'androidx.appcompat:appcompat:1.5.1'
+implementation 'com.google.android.material:material:1.3.0'
+implementation 'com.squareup.okhttp:okhttp:2.4.0'
+implementation 'androidx.multidex:multidex:2.0.0'
+implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+implementation 'com.google.android.gms:play-services-auth:17.0.0'
+implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
