--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "js-sha512": "^0.9.0",
     "patch-package": "^8.0.0",
+    "qs": "^6.12.1",
     "react": "18.2.0",
     "react-devtools": "^5.0.0",
     "react-native": "0.73.5",
     "react-native-document-picker": "^9.0.1",
     "react-native-drawer-layout": "^3.2.2",
+    "react-native-easebuzz-kit": "file:react-native-easebuzz-kit-1.0.0.tgz",
     "react-native-easy-swiper": "^0.1.15",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
