--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.2",
     "react-native-version": "^4.0.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sp-react-native-in-app-updates": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
