--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-document-picker": "^9.0.1",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-easebuzz-kit": "file:react-native-easebuzz-kit-1.0.0.tgz",
+    "react-native-easy-content-loader": "^0.3.2",
     "react-native-easy-swiper": "^0.1.15",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
